--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -38,18 +38,18 @@ views:
           - calendar.contacts
           - calendar.cykelkalendern
 
-#      - id: fc6e5028448444ed8f3fee546d54f414  # Automatically created id
-#        type: map
-#        entities:
-#          - entity: device_tracker.lidija_762061a869904b4d98a3f95645299120
-#          - zone.home
-#        title: Where is Lidija?
-#      - id: 350f3c07bb604ea0a1605e5404899bfb  # Automatically created id
-#        type: map
-#        entities:
-#          - entity: device_tracker.christer_honor
-#          - zone.home
-#        title: Where is Christer?
+      - id: fc6e5028448444ed8f3fee546d54f414  # Automatically created id
+        type: map
+        entities:
+          - entity: device_tracker.google_maps_108889296451373807738
+          - zone.home
+        title: Where is Lidija?
+      - id: 350f3c07bb604ea0a1605e5404899bfb  # Automatically created id
+        type: map
+        entities:
+          - entity: device_tracker.google_maps_116768446304662806225
+          - zone.home
+        title: Where is Christer?
       - id: 37df7843634042acb328532a0acdddfb  # Automatically created id
         type: entities
         entities:
@@ -219,8 +219,14 @@ views:
           - entity: light.hue_go_1 
             name: Living room sofa left
             type: custom:slider-entity-row
+          - entity: light.onoff_plug_2
+            name: Living room sofa right
+            type: custom:slider-entity-row
           - entity: light.onoff_plug_3
             name: Living room sofa left
+            type: custom:slider-entity-row
+          - entity: light.onoff_plug_4
+            name: Bookshelf power
             type: custom:slider-entity-row
           - input_select.livingroom
           - script.moodlight
@@ -321,18 +327,20 @@ views:
           - entity: light.hue_go_1
             name: Living room sofa left
             type: custom:slider-entity-row
-          - entity: light.onoff_plug_3
-            name: Living room sofa left
-            type: custom:slider-entity-row
           - input_select.livingroom
           - script.moodlight
           - scene.livingroom_normal
       - id: e0805c4bdc0c484fa53489293978a6c0  # Automatically created id
         type: entities
-        title: Living room
+        title: Living room power
         show_header_toggle: true
         entities:
-          - light.onoff_plug_2
+          - entity: light.onoff_plug_2
+            name: Living room sofa right
+          - entity: light.onoff_plug_3
+            name: Living room sofa left
+          - entity: light.onoff_plug_4
+            name: Bookshelf power
       - id: e3df7a88f95a47ce8b8d01717e1855d1  # Automatically created id
         type: entities
         title: Living room Media
@@ -686,8 +694,12 @@ views:
         show_header_toggle: true
         entities:
           - sensor.hallway_temperature
-          - sensor.medel_temperatur
           - sensor.kitchen_temperature
+          - sensor.guest_room_temperature
+          - sensor.mid_temp_inside
+          - sensor.max_temp_inside
+          - sensor.min_temp_inside
+          - sensor.latest_temp_inside
       - id: de164e40fa4d45389d5661def7fc2240  # Automatically created id
         type: entities
         title: Hallway sensors
@@ -786,6 +798,12 @@ views:
     title: Todays weather
     icon: mdi:weather-lightning-rainy
     cards:
+      - id: bd713fa5ae2949a298717cd021f0a88fs  # Automatically created id
+        type: weather-forecast
+        entity: weather.smhi_gothenburg
+      - id: bd713fa5ae2949a298717cd021f0a88fy  # Automatically created id
+        type: weather-forecast
+        entity: weather.yweather
       - id: bd713fa5ae2949a298717cd021f0a88f  # Automatically created id
         type: weather-forecast
         entity: weather.dark_sky
@@ -942,6 +960,9 @@ views:
         camera_image: camera.pollenkalender
         show_info: true
         tap_action: dialog
+      - id: bd713fa5ae2949a298717cd021f0a88fs  # Automatically created id
+        type: weather-forecast
+        entity: weather.smhi_gothenburg
   - id: 13  # Automatically created id
     title: Important days
     icon: mdi:alert-circle-outline
@@ -954,6 +975,15 @@ views:
           - automation.important
           - sensor.anniversary
           - sensor.engagement
+          - device_tracker.google_maps_108889296451373807738
+          - device_tracker.galaxys9lan
+          - sensor.phone_battery2
+          - sensor.phone_battery3
+          - sensor.phone_battery4
+          - sensor.phone_battery5
+          - sensor.phone_battery6
+          - sensor.phone_battery7
+          - sensor.phone_battery8
   - id: 14  # Automatically created id
     title: Settings
     icon: mdi:panda
@@ -1021,7 +1051,7 @@ views:
               action: toggle
             entity: switch.guests_present
             style:
-              top: 30%
+              top: 27%
               left: 60%
               padding: 0px
             --paper-item-icon-color: rgb(89, 89, 89)
@@ -1032,7 +1062,7 @@ views:
               action: toggle
             entity: switch.cg_present
             style:
-              top: 33%
+              top: 30%
               left: 60%
               padding: 0px
             --paper-item-icon-color: rgb(89, 89, 89)
@@ -1043,7 +1073,7 @@ views:
               action: toggle
             entity: switch.lt_present
             style:
-              top: 36%
+              top: 33%
               left: 60%
               padding: 0px
             --paper-item-icon-color: rgb(89, 89, 89)
@@ -1055,7 +1085,7 @@ views:
               action: toggle
             entity: switch.home
             style:
-              top: 39%
+              top: 36%
               left: 60%
               padding: 0px
             --paper-item-icon-color: rgb(89, 89, 89)
@@ -1067,7 +1097,7 @@ views:
               action: toggle
             entity: switch.xmas
             style:
-              top: 42%
+              top: 39%
               left: 60%
               padding: 0px
             --paper-item-icon-color: rgb(89, 89, 89)
@@ -1079,13 +1109,24 @@ views:
               action: toggle
             entity: switch.halloween
             style:
-              top: 45%
+              top: 42%
               left: 60%
               padding: 0px
             --paper-item-icon-color: rgb(89, 89, 89)
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px gold)
 
+          - type: state-icon
+            tap_action:  
+              action: toggle
+            entity: switch.party
+            style:
+              top: 45%
+              left: 60%
+              padding: 0px
+            --paper-item-icon-color: rgb(89, 89, 89)
+            --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
+              drop-shadow(0px 0px 10px gold)
 
           - type: state-icon
             tap_action: 
@@ -1143,7 +1184,7 @@ views:
           - type: state-label
             entity: sensor.time
             style:
-              top: 25%
+              top: 24%
               left: 60%
             --paper-item-icon-color: rgb(89, 89, 89)
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
@@ -1527,6 +1568,19 @@ views:
             tap_action:  
               action: toggle
             icon: mdi:power-socket-eu
+            entity: light.onoff_plug_4
+            style:
+              top: 50%
+              left: 41%
+            --paper-item-icon-color: rgb(89, 89, 89)
+            --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
+              drop-shadow(0px 0px 10px black)
+
+
+          - type: state-icon
+            tap_action:  
+              action: toggle
+            icon: mdi:power-socket-eu
             entity: light.onoff_plug_3
             style:
               top: 68%
@@ -1603,7 +1657,7 @@ views:
             entity: media_player.living_room_display
             style:
               top: 50%
-              left: 41%
+              left: 39%
             --paper-item-icon-color: rgb(89, 89, 89)
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px black)
@@ -1631,7 +1685,7 @@ views:
             entity: media_player.living_room_speaker
             style:
               top: 50%
-              left: 38%
+              left: 37%
             --paper-item-icon-color: rgb(89, 89, 89)
             --paper-item-icon-active-color: yellow brightness(130%) saturate(1.5)
               drop-shadow(0px 0px 10px black)
